--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
 }
 
 dependencies {
+    /*compile fileTree(dir: 'libs', include ['*.jar'])
+    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    android*/
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
